--- a/jigsaw-puzzle-style.css
+++ b/jigsaw-puzzle-style.css
@@ -1041,6 +1041,7 @@
 }
 
 .game-end-wrapper {
+  display: none;
   position: absolute;
   top: 18px;
   left: 18px;
@@ -1096,10 +1097,13 @@
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 37px;
+  bottom: 60px;
 }
 
 @media screen and (max-width: 1200px) {
+  .game-end-wrapper .end_ctas {
+    bottom: 41px;
+  }
   .game-end-wrapper .end_ctas .play_again, .game-end-wrapper .end_ctas .spin_again, .game-end-wrapper .end_ctas .get_coupon_btn {
     font-size: 12px;
   }
